# straylight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/audio-gui/: audio_panel.h  main.cpp
apps/audio_mixer/: CMakeLists.txt  main.cpp  mixer.cpp  mixer.h  pipewire_client.cpp  pipewire_client.h
apps/backup/: main.cpp
apps/bench-gui/: main.cpp
apps/boot-gui/: boot_panel.h  main.cpp
apps/clipboard/: history.cpp  main.cpp  watcher.cpp  watcher.h
apps/color-gui/: color_panel.h  main.cpp
apps/cron-gui/: cron_panel.h  main.cpp
apps/disk-gui/: disk_panel.h  main.cpp
apps/display-gui/: display_panel.h  main.cpp
apps/fabric-gui/: fabric_panel.h  main.cpp
apps/file_manager/: CMakeLists.txt  main.cpp
apps/flux-gui/: flux_panel.h  main.cpp
apps/font-gui/: font_panel.h  main.cpp
apps/greeter/: CMakeLists.txt  session.cpp
apps/health-gui/: health_panel.h  main.cpp
apps/hub/: dashboard.cpp  gpu_panel.h  main.cpp  network_panel.cpp  service_panel.cpp  service_panel.h
apps/image_viewer/: CMakeLists.txt  main.cpp  thumbnails.cpp
apps/input-gui/: input_panel.h  main.cpp
apps/intent-gui/: intent_panel.h  main.cpp
apps/log-gui/: log_panel.h  main.cpp
apps/media_library/: main.cpp
apps/mesh-gui/: main.cpp  mesh_panel.h
apps/migrate-gui/: main.cpp  migrate_panel.h
apps/network-gui/: main.cpp  network_panel.h
apps/notify-gui/: main.cpp  notify_panel.h
apps/oobe/: CMakeLists.txt
apps/player/: main.cpp  playlist.cpp  visualizer.cpp
apps/policy-gui/: main.cpp  policy_panel.h
apps/power-gui/: main.cpp  power_panel.h
apps/predict-gui/: main.cpp
apps/probe-gui/: main.cpp  scan_panel.h
apps/replay-gui/: main.cpp  timeline_panel.h
apps/rewind-gui/: main.cpp  rewind_panel.h
apps/sandbox-gui/: main.cpp
apps/settings/: CMakeLists.txt  main.cpp
apps/shield-gui/: main.cpp  shield_panel.h
apps/snapshot-gui/: main.cpp
apps/system_monitor/: CMakeLists.txt  main.cpp
apps/terminal/: CMakeLists.txt
apps/update-gui/: main.cpp  update_panel.h
apps/users-gui/: main.cpp  users_panel.h
apps/vault-gui/: main.cpp  vault_panel.h
apps/widgets/: CMakeLists.txt  main.cpp  widget_registry.h
apps/widgets/hpc/: cluster_map.cpp  cluster_map.h  job_queue.cpp  job_queue.h  network_topology.cpp  power_monitor.cpp  resource_allocator.cpp
apps/widgets/ml/: gpu_hud.cpp  inference_monitor.cpp  model_browser.cpp  tensor_inspector.cpp  training_dashboard.cpp
apps/widgets/research/: experiment_tracker.h  quantum_circuit.h
apps/widgets/system/: cpu_topology.cpp  entropy_pool.cpp  entropy_pool.h  memory_pressure.cpp  memory_pressure.h  scheduler_view.cpp  scheduler_view.h
apps/wizard/: CMakeLists.txt  main.cpp
apps/wizard/pages/: ml_setup.cpp  ml_setup.h  summary.cpp
cmake/: StraylightCommon.cmake
cmake/protocols/: wlr-layer-shell-unstable-v1.xml
compositor/: CMakeLists.txt  decorations.cpp  decorations.h  input.cpp  input.h  ipc.cpp  ipc.h  layer_shell.cpp  layer_shell.h  main.cpp  output.cpp  output.h  server.cpp  server.h  session_lock.cpp  session_lock.h  tiling.cpp  tiling.h  view.cpp  view.h  workspace.cpp  workspace.h
config/shell/: straylight-shell.conf
docs/: index.md  straylight-alice.md  straylight-audio.md  straylight-autotune.md  straylight-bench.md  straylight-boot.md  straylight-bridge.md  straylight-capsule.md  straylight-color.md  straylight-cron.md  straylight-dash.md  straylight-disk.md  straylight-display.md  straylight-echo.md  straylight-fabric.md  straylight-flux.md  straylight-fonts.md  straylight-fuse.md  straylight-garden.md  straylight-ghost.md  straylight-health.md  straylight-hotpatch.md  straylight-hub.md  straylight-input.md  straylight-intent.md  straylight-lens.md  straylight-link.md  straylight-log.md  straylight-mesh.md  straylight-migrate.md  straylight-mirror.md  straylight-nerve.md  straylight-network.md  straylight-notify.md  straylight-pipe.md  straylight-policy.md  straylight-power.md  straylight-predict.md  straylight-probe.md  straylight-quota.md  (+16 more)
iso/live-build/: build.sh
kernel/enclave/: enclave.h  enclave_attestation.c  enclave_epc.c  enclave_main.c  enclave_sealed.c
kernel/entropy/: entropy_health.c  (+3 more)
lib/common/: CMakeLists.txt
lib/common/include/straylight/: common.h  config.h  daemon.h  error.h  ipc.h  ipc_client.h  log.h  result.h  types.h
lib/common/src/: daemon.cpp  ipc.cpp  log.cpp  stub.cpp
lib/hw/: CMakeLists.txt
lib/hw/src/: entropy.cpp  gpu.cpp  stub.cpp
lib/ml/: CMakeLists.txt
lib/ml/include/straylight/ml/: kv_cache.h
lib/ml/src/: graph.cpp  kv_cache.cpp  stub.cpp
lib/net/: CMakeLists.txt
lib/net/src/: stub.cpp  transport.cpp
scripts/: build-iso.sh  build-packages.sh
services/fabric/: CMakeLists.txt  main.cpp  query_engine.h  topology.h
services/intent/: CMakeLists.txt  action_registry.h  intent_engine.cpp  main.cpp
services/predict/: CMakeLists.txt  main.cpp  prediction_engine.h  preloader.h  usage_collector.h
services/quota/: CMakeLists.txt  main.cpp  quota_engine.cpp
services/secrets/: CMakeLists.txt  main.cpp  secrets_engine.cpp  secrets_engine.h
shell/: CMakeLists.txt  layer_surface.cpp  layer_surface.h  main.cpp  renderer.cpp  renderer.h
shell/extensions/: CMakeLists.txt  builtin_clock.cpp  builtin_notes.cpp  builtin_quicklaunch.cpp  builtin_sysmon.cpp  builtin_weather.cpp  extension_api.h  extension_loader.cpp  extension_loader.h
shell/keybinds/: default_keybinds.json  keybind_manager.cpp  keybind_manager.h
shell/panels/: app_launcher.cpp  app_launcher.h  bottom_dock.cpp  bottom_dock.h  left_dock.cpp  left_dock.h  top_bar.cpp  top_bar.h
shell/settings/: appearance.cpp  appearance.h  display.cpp  display.h  input.cpp  input.h  network.cpp  network.h
shell/themes/: theme_engine.cpp  theme_engine.h
shell/widgets/: notification.cpp  notification.h  screenshot.cpp  screenshot.h  volume_osd.cpp  volume_osd.h
tests/: CMakeLists.txt
tests/unit/apps/: CMakeLists.txt
tests/unit/common/: CMakeLists.txt
tests/unit/hw/: CMakeLists.txt
tests/unit/subsystems/: CMakeLists.txt  test_dpdk.cpp  test_entropy_daemon.cpp
(+172 files in other folders)
