cmake_minimum_required(VERSION 3.25)
project(straylight VERSION 1.0.0 LANGUAGES CXX C)

# C++20 required
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Include shared cmake modules
include(cmake/StraylightVersion.cmake)
include(cmake/StraylightCommon.cmake)

# Build options
option(BUILD_TESTS "Build test suite" ON)
option(BUILD_COMPOSITOR "Build Wayland compositor" ON)
option(BUILD_SHELL "Build desktop shell" ON)
option(BUILD_APPS "Build built-in applications" ON)
option(BUILD_SUBSYSTEMS "Build subsystem binaries" ON)

# Output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Shared libraries
add_subdirectory(lib/common)
add_subdirectory(lib/ml)
add_subdirectory(lib/net)
add_subdirectory(lib/hw)

# Subsystem daemons
if(BUILD_SUBSYSTEMS)
    add_subdirectory(bin/bus)
    add_subdirectory(bin/registry)
    add_subdirectory(bin/entropy)
    add_subdirectory(bin/scheduler)
    add_subdirectory(bin/core)
    add_subdirectory(bin/agent)
    add_subdirectory(bin/compiler)
    add_subdirectory(bin/morph)
    add_subdirectory(bin/snn)
    add_subdirectory(bin/rhem)
    add_subdirectory(bin/xdp)
    add_subdirectory(bin/dpdk)
    add_subdirectory(bin/rdma_bus)
    add_subdirectory(bin/enclave)
    add_subdirectory(bin/fuse)
    add_subdirectory(services/alice)
    add_subdirectory(tools/alice-cli)
    add_subdirectory(tools/snapshot)
    add_subdirectory(tools/sandbox)
    add_subdirectory(services/replay)
    add_subdirectory(tools/replay-cli)
    add_subdirectory(tools/bench)
    add_subdirectory(tools/vault)
    add_subdirectory(tools/probe)
    add_subdirectory(services/cron)
    add_subdirectory(tools/cron-cli)
    add_subdirectory(tools/migrate)
    add_subdirectory(services/health)
    add_subdirectory(tools/health-cli)
    add_subdirectory(services/flux)
    add_subdirectory(tools/flux-cli)
    add_subdirectory(tools/trace)
    add_subdirectory(tools/garden)
    add_subdirectory(tools/capsule)
    add_subdirectory(services/nerve)
    add_subdirectory(tools/nerve-cli)
    add_subdirectory(tools/echo)
    add_subdirectory(services/weave)
    add_subdirectory(tools/weave-cli)
    add_subdirectory(tools/fonts)
    add_subdirectory(tools/color)
    add_subdirectory(services/notify)
    add_subdirectory(tools/notify-cli)
    add_subdirectory(tools/disk)
    add_subdirectory(services/power)
    add_subdirectory(tools/power-cli)
    add_subdirectory(tools/boot)
endif()

# Compositor
if(BUILD_COMPOSITOR)
    add_subdirectory(compositor)
endif()

# Shell, Greeter, OOBE, Wizard, Extensions
if(BUILD_SHELL)
    add_subdirectory(shell)
    add_subdirectory(shell/extensions)
    add_subdirectory(apps/greeter)
    add_subdirectory(apps/oobe)
    add_subdirectory(apps/wizard)
endif()

# Widget panels (ML/HPC/System/Research)
if(BUILD_APPS)
    add_subdirectory(apps/widgets)
    add_subdirectory(apps/vault-gui)
    add_subdirectory(apps/probe-gui)
    add_subdirectory(apps/snapshot-gui)
    add_subdirectory(apps/sandbox-gui)
    add_subdirectory(apps/replay-gui)
    add_subdirectory(apps/bench-gui)
    add_subdirectory(apps/health-gui)
    add_subdirectory(apps/cron-gui)
    add_subdirectory(apps/flux-gui)
    add_subdirectory(apps/shield-gui)
    add_subdirectory(apps/migrate-gui)
    add_subdirectory(apps/mesh-gui)
    add_subdirectory(apps/hub)
endif()

# Tests
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

# Status
message(STATUS "========================================")
message(STATUS "StrayLight OS v${PROJECT_VERSION}")
message(STATUS "========================================")
message(STATUS "  C++ Standard:  ${CMAKE_CXX_STANDARD}")
message(STATUS "  Build type:    ${CMAKE_BUILD_TYPE}")
message(STATUS "  Tests:         ${BUILD_TESTS}")
message(STATUS "  Compositor:    ${BUILD_COMPOSITOR}")
message(STATUS "  Shell:         ${BUILD_SHELL}")
message(STATUS "  Apps:          ${BUILD_APPS}")
message(STATUS "  Subsystems:    ${BUILD_SUBSYSTEMS}")
message(STATUS "========================================")
